syntax = "proto3";

package eventstore;

option go_package = "github.com/riken127/graveyar_db/sdks/go/proto;eventstorepb";

option java_multiple_files = true;
option java_package = "com.eventstore.client.model";


message Event {
    string id = 1;
    string event_type = 2;
    bytes payload = 3;
    uint64 timestamp = 4;
    map<string, string> metadata = 5;
}

message AppendEventRequest {
    string stream_id = 1;
    repeated Event events = 2;
    // Expected version for optimistic concurrency control.
    // -1 (or omit/0 depending on logic) can represent "any version" or "no check".
    // For specific requirement, explicit version is needed.
    uint64 expected_version = 3;
    // explicit ownership: signal that this request was already forwarded
    bool is_forwarded = 4;
}

message AppendEventResponse {
    bool success = 1;
}

message GetEventsRequest {
    string stream_id = 1;
}

// --- Schema Definitions ---

message Schema {
    string name = 1;
    map<string, Field> fields = 2;
}

message Field {
    FieldType field_type = 1;
    bool nullable = 2;
    bool overrides_on_null = 3;
    FieldConstraints constraints = 4;
}

message FieldConstraints {
    bool required = 1;
    // For numbers
    optional double min_value = 2;
    optional double max_value = 3;
    // For strings
    optional int32 min_length = 4;
    optional int32 max_length = 5;
    optional string regex = 6;
}

message FieldType {
    enum Primitive {
        NUMBER = 0;
        STRING = 1;
        BOOLEAN = 2;
    }
    
    message Enum {
        repeated string variants = 1;
    }
    
    // Recursive message definition
    message Array {
        FieldType element_type = 1;
    }

    oneof kind {
        Primitive primitive = 1;
        Enum enum_def = 2;
        Schema sub_schema = 3;
        Array array_def = 4;
    }
}

message UpsertSchemaRequest {
    Schema schema = 1;
}

message UpsertSchemaResponse {
    bool success = 1;
    string message = 2;
}

message GetSchemaRequest {
    string name = 1;
}

message GetSchemaResponse {
    Schema schema = 1;
    bool found = 2;
}

service EventStore {
    rpc AppendEvent(AppendEventRequest) returns (AppendEventResponse);
    rpc GetEvents(GetEventsRequest) returns (stream Event);
    
    // Schema Management
    rpc UpsertSchema(UpsertSchemaRequest) returns (UpsertSchemaResponse);
    rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);
}